# Distributed-kvstore

./: .gitignore  CMakeLists.txt  README.md
Project/scripts/: benchmark.sh  kill_node.sh  start_cluster.sh  stop_cluster.sh
Project/src/common/: buffer.c  config.c  hash.h  log.c  log.h  sha1.c  sha1.h
Project/src/net/: protocol.h  tcp_client.h  websocket.h
Project/src/raft/: raft_log.c  raft_timer.c  raft_timer.h
Project/src/wal/: snapshot.c  wal.c
dashboard/: index.html  package-lock.json  package.json  standalone.html
dashboard/src/: App.jsx  index.css
dashboard/src/components/: HashRing.jsx  LogViewer.jsx  NodeCard.jsx  StatsBar.jsx  ThroughputChart.jsx
dashboard/src/hooks/: useWebSocket.js
dashboard/src/utils/: constants.js
scripts/: start_node.sh
src/client/: cli.c
src/common/: buffer.h  config.h  hash.c
src/net/: protocol.c  tcp_client.c  tcp_server.c  tcp_server.h  websocket.c
src/raft/: raft.c  raft.h  raft_log.h  raft_rpc.c  raft_rpc.h
src/server/: main.c
src/store/: kvstore.c  kvstore.h  shard.c  shard.h
src/wal/: snapshot.h  wal.h
tests/: test_hash.c  test_kvstore.c  test_raft.c  test_wal.c
